--- a/templates/layout.html
+++ b/templates/layout.html
@@ -121,6 +121,13 @@
                         </svg>
                         Download
                     </a>
+                    <a href="{{ url_for('python_strategy_bp.index') }}" 
+                       class="btn btn-ghost justify-start gap-2 {{ 'btn-active' if request.endpoint == 'python_strategy_bp.index' }}">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4" />
+                        </svg>
+                        Python
+                    </a>
                     <a href="https://openalgo.in/discord" class="btn btn-ghost justify-start gap-2" target="_blank" rel="noopener noreferrer">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8h2a2 2 0 012 2v6a2 2 0 01-2 2h-2v4l-4-4H9a1.994 1.994 0 01-1.414-.586m0 0L11 14h4a2 2 0 002-2V6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2v4l.586-.586z" />
