--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -15,52 +15,58 @@
     <!-- Desktop Menu -->
     <div class="navbar-center hidden lg:flex">
         <ul class="menu menu-horizontal px-1 gap-1">
-            <li>
+            <li class="{{ 'menu-active' if request.endpoint == 'dashboard_bp.dashboard' }}">
                 <a href="{{ url_for('dashboard_bp.dashboard') }}" 
-                   class="text-base hover:bg-base-200 {{ 'active' if request.endpoint == 'dashboard_bp.dashboard' }}">
+                   class="text-base hover:bg-base-200">
                     Dashboard
                 </a>
             </li>
-            <li>
+            <li class="{{ 'menu-active' if request.endpoint == 'orders_bp.orderbook' }}">
                 <a href="{{ url_for('orders_bp.orderbook') }}" 
-                   class="text-base hover:bg-base-200 {{ 'active' if request.endpoint == 'orders_bp.orderbook' }}">
+                   class="text-base hover:bg-base-200">
                     Orderbook
                 </a>
             </li>
-            <li>
+            <li class="{{ 'menu-active' if request.endpoint == 'orders_bp.tradebook' }}">
                 <a href="{{ url_for('orders_bp.tradebook') }}" 
-                   class="text-base hover:bg-base-200 {{ 'active' if request.endpoint == 'orders_bp.tradebook' }}">
+                   class="text-base hover:bg-base-200">
                     Tradebook
                 </a>
             </li>
-            <li>
+            <li class="{{ 'menu-active' if request.endpoint == 'orders_bp.positions' }}">
                 <a href="{{ url_for('orders_bp.positions') }}" 
-                   class="text-base hover:bg-base-200 {{ 'active' if request.endpoint == 'orders_bp.positions' }}">
+                   class="text-base hover:bg-base-200">
                     Positions
                 </a>
             </li>
-            <li>
+            <li class="{{ 'menu-active' if request.endpoint == 'tv_json_bp.tradingview_json' }}">
                 <a href="{{ url_for('tv_json_bp.tradingview_json') }}" 
-                   class="text-base hover:bg-base-200 {{ 'active' if request.endpoint == 'tv_json_bp.tradingview_json' }}">
+                   class="text-base hover:bg-base-200">
                     Tradingview
                 </a>
             </li>
-            <li>
+            <li class="{{ 'menu-active' if request.endpoint.startswith('chartink_bp.') }}">
                 <a href="{{ url_for('chartink_bp.index') }}" 
-                   class="text-base hover:bg-base-200 {{ 'active' if request.endpoint.startswith('chartink_bp.') }}">
+                   class="text-base hover:bg-base-200">
                     Chartink
                 </a>
             </li>
-            <li>
+            <li class="{{ 'menu-active' if request.endpoint.startswith('strategy_bp.') }}">
                 <a href="{{ url_for('strategy_bp.index') }}"
-                   class="text-base hover:bg-base-200 {{ 'active' if request.endpoint.startswith('strategy_bp.') }}">
+                   class="text-base hover:bg-base-200">
                     Strategy
                 </a>
             </li>
-            <li>
+            <li class="{{ 'menu-active' if request.endpoint == 'analyzer_bp.analyzer' }}">
                 <a href="{{ url_for('analyzer_bp.analyzer') }}"
-                   class="text-base hover:bg-base-200 {{ 'active' if request.endpoint == 'analyzer_bp.analyzer' }}">
+                   class="text-base hover:bg-base-200">
                     API Analyzer
+                </a>
+            </li>
+            <li class="{{ 'menu-active' if request.endpoint == 'python_strategy_bp.index' }}">
+                <a href="{{ url_for('python_strategy_bp.index') }}" 
+                   class="text-base hover:bg-base-200">
+                    Python
                 </a>
             </li>
         </ul>
